--- a/lib/qr_push/www/package.json
+++ b/lib/qr_push/www/package.json
@@ -1,7 +1,7 @@
 {
   "name": "qr_push",
   "scripts": {
-    "watch:js": "rollup -w -i assets/main.js -o public/main.js -f iife -n main",
+    "watch:js": "rollup -w -i assets/main.js -o public/main.js -f iife -n QrPush",
     "watch:css": "node-sass -w assets/main.scss public/main.css",
     "prewatch:css": "node-sass assets/main.scss public/main.css"
   },
