--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,13 @@
-version: '2'
+version: "3"
 
 services:
-  qr_push:
+  app:
     build:
       context: "."
       dockerfile: "Dockerfile"
-    ports:
-      - 8080:8080
-      - 8443:8443
     volumes:
       - .:/opt/app
-      ## uncomment the below lines if you want to see the contents of the
-      ## container's deps/ and _build/ directories in your local project,
-      ## under container_mix
-      # - ./container_mix_artifacts:/opt/mix_artifacts
+    network_mode: host
+    environment:
+      - PORT=8080
+    command: "./watch.sh"
