--- a/rebar.config
+++ b/rebar.config
@@ -14,8 +14,8 @@
 {project_plugins, [rebar_gleam, rebar3_run]}.
 
 {deps, [
-    % {gleam_stdlib, "0.8.0"},
-    {gleam_stdlib, {git, "git://github.com/gleam-lang/stdlib.git"}},
+    {base32, "0.1.0"},
+    {gleam_stdlib, "0.9.0"},
     {midas, {git, "git://github.com/did-app/midas.git"}},
     {pgo, "0.11.0"}
 ]}.
