secrets are binaries

--- a/rebar.config
+++ b/rebar.config
@@ -15,8 +15,9 @@
 
 {deps, [
     {base32, "0.1.0"},
-    {gleam_stdlib, "0.9.0"},
-    {midas, {git, "git://github.com/did-app/midas.git"}},
+    % {gleam_stdlib, "0.9.0"},
+    {gleam_stdlib, {git, "git://github.com/midas-framework/stdlib.git", {branch, "binary"}}},
+    {midas, {git, "git://github.com/midas-framework/midas.git"}},
     {pgo, "0.11.0"}
 ]}.
 
