--- a/rebar.config
+++ b/rebar.config
@@ -16,7 +16,7 @@
 {deps, [
     {base32, "0.1.0"},
     % {gleam_stdlib, "0.9.0"},
-    {gleam_stdlib, {git, "git://github.com/midas-framework/stdlib.git", {branch, "binary"}}},
+    {gleam_stdlib, {git, "git://github.com/gleam-lang/stdlib.git"}},
     {midas, {git, "git://github.com/midas-framework/midas.git"}},
     {pgo, "0.11.0"}
 ]}.
