--- a/elixir_buildpack.config
+++ b/elixir_buildpack.config
@@ -5,4 +5,5 @@ elixir_version=1.10.3
 # available versions https://github.com/HashNuke/heroku-buildpack-elixir-otp-builds/blob/master/otp-versions
 erlang_version=22.3.4
 
-hook_pre_compile="mv bin/gleam /bin/gleam"
+# Doesn't work static file system
+# hook_pre_compile="mv bin/gleam /bin/gleam"
