modify path Precompile

--- a/elixir_buildpack.config
+++ b/elixir_buildpack.config
@@ -7,3 +7,4 @@ erlang_version=22.3.4
 
 # Doesn't work static file system
 # hook_pre_compile="mv bin/gleam /bin/gleam"
+hook_pre_compile="export PATH=~/bin:$PATH"
