--- a/elixir_buildpack.config
+++ b/elixir_buildpack.config
@@ -8,7 +8,7 @@ erlang_version=22.3.4
 # Doesn't work static file system
 # hook_pre_compile="mv bin/gleam /bin/gleam"
 # hook_pre_compile="export PATH=~/bin:$PATH"
-# hook_pre_compile="cp bin/gleam /bin/gleam"
-hook_pre_compile="echo $PATH && echo pwd"
+hook_pre_compile="cp bin/gleam /usr/local/bin/gleam"
+# hook_pre_compile="echo $PATH && echo pwd"
 
 # hook_compile="PATH=$PATH:./bin mix compile --force"
