--- a/elixir_buildpack.config
+++ b/elixir_buildpack.config
@@ -11,4 +11,4 @@ erlang_version=22.3.4
 hook_pre_compile="cp bin/gleam /usr/local/bin/gleam"
 # hook_pre_compile="echo $PATH && echo pwd"
 
-# hook_compile="PATH=$PATH:./bin mix compile --force"
+hook_compile="PATH=$PATH:/app/bin mix compile --force"
