--- a/elixir_buildpack.config
+++ b/elixir_buildpack.config
@@ -9,6 +9,6 @@ erlang_version=22.3.4
 # hook_pre_compile="mv bin/gleam /bin/gleam"
 # hook_pre_compile="export PATH=~/bin:$PATH"
 hook_pre_compile="cp bin/gleam /usr/local/bin/gleam"
-# hook_pre_compile="echo $PATH && echo pwd"
+# hook_pre_compile="pwd"
 
 hook_compile="PATH=$PATH:/app/bin mix compile --force"
